--- a/app/src/main/res/layout/opinion_detail_fragment.xml
+++ b/app/src/main/res/layout/opinion_detail_fragment.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@mipmap/registration_bg"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
     <include layout="@layout/custom_product_item"/>
     <com.svs.hztb.CustomViews.WalkWayButton
         android:id="@+id/button_view_selfie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/picton_blue"
+        android:background="@mipmap/blue_background"
         android:text="@string/view_selfie"
         android:layout_margin="10dp"
         android:textColor="@android:color/white" />
@@ -25,39 +30,43 @@
         android:orientation="horizontal"
         android:weightSum="4"
         android:layout_height="wrap_content">
-        <com.svs.hztb.CustomViews.WalkWayButton
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Wow"
+            android:layout_height="match_parent"
+            android:src="@mipmap/wow"
             android:layout_weight="1"
             android:id="@+id/button_double_ok"
+            android:padding="2dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true" />
 
-        <com.svs.hztb.CustomViews.WalkWayButton
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Like"
+            android:layout_height="match_parent"
+            android:src="@mipmap/like"
             android:layout_weight="1"
+            android:padding="2dp"
 
             android:id="@+id/button_single_ok"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/button_double_ok" />
 
-        <com.svs.hztb.CustomViews.WalkWayButton
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Neutrl"
+            android:layout_height="match_parent"
+            android:src="@mipmap/neutral"
             android:layout_weight="1"
+            android:padding="2dp"
 
             android:id="@+id/button_maybe"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/button_single_ok" />
 
-        <com.svs.hztb.CustomViews.WalkWayButton
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Down"
+            android:layout_height="match_parent"
+            android:src="@mipmap/dont_like"
+            android:padding="2dp"
             android:id="@+id/button_down"
             android:layout_weight="1" />
         </LinearLayout>
@@ -72,6 +81,7 @@
             android:id="@+id/textView4"
             android:textColor="@android:color/black"
             android:textSize="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:layout_alignStart="@+id/button_double_ok"
             android:layout_below="@+id/button_double_ok"
@@ -133,6 +143,7 @@
             android:textSize="18sp"
             android:gravity="center"
             android:textStyle="bold"
+            android:textColor="@android:color/black"
             android:text="@string/write_your_comment_about_the_product"/>
 
         <com.svs.hztb.CustomViews.WalkWayEditText
@@ -141,10 +152,12 @@
             android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:lines="3"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
+            android:textColorHint="@android:color/darker_gray"
             android:gravity="left"
             android:id="@+id/response_Text"
             android:hint="@string/enter_comment"
+
             android:background="@drawable/edittext_background"/>
 
     </LinearLayout>
@@ -153,10 +166,11 @@
         android:id="@+id/send_Opinion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/picton_blue"
+        android:background="@mipmap/blue_background"
         android:text="@string/send_your_opinion"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textColor="@android:color/white" />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
