--- a/app/src/main/res/layout/custom_rating_item.xml
+++ b/app/src/main/res/layout/custom_rating_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
@@ -16,100 +16,114 @@
         android:text="18 April 2018"
         android:textColor="@android:color/black" />
 
-    <ImageView
-        android:id="@+id/button_double_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:src="@mipmap/wow"
-        android:layout_margin="5dp"
-        android:layout_toStartOf="@+id/button_single_ok"
-        android:text="ButtOk" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/button_single_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/like"
-        android:layout_margin="5dp"
+    <LinearLayout android:layout_width="match_parent"
+        android:padding="5dp"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/wow"
+            android:layout_weight="1"
+            android:id="@+id/button_double_ok"
+            android:padding="2dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true" />
 
-        android:layout_alignBottom="@+id/button_double_ok"
-        android:layout_toStartOf="@+id/button_maybe"
-        android:text="SingOk"
-        android:layout_alignTop="@+id/button_double_ok" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/like"
+            android:layout_weight="1"
+            android:padding="2dp"
 
-    <ImageView
-        android:id="@+id/button_maybe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/neutral"
-        android:layout_margin="5dp"
+            android:id="@+id/button_single_ok"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/button_double_ok" />
 
-        android:layout_toStartOf="@+id/button_down"
-        android:layout_alignBottom="@+id/button_double_ok"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/neutral"
+            android:layout_weight="1"
+            android:padding="2dp"
 
-        android:text="May Be"
-        android:layout_alignTop="@+id/button_single_ok" />
+            android:id="@+id/button_maybe"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/button_single_ok" />
 
-    <ImageView
-        android:id="@+id/button_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:src="@mipmap/dont_like"
-        android:layout_marginRight="30dp"
-        android:layout_alignBottom="@+id/button_double_ok"
-        android:text="ButtDwn"
-        android:layout_margin="5dp"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/dont_like"
+            android:padding="2dp"
+            android:id="@+id/button_down"
+            android:layout_weight="1" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:weightSum="4"
+        android:layout_height="wrap_content">
+        <com.svs.hztb.CustomViews.WalkWayTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textview_ok"
+            android:textColor="@android:color/black"
+            android:textSize="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:layout_alignStart="@+id/button_double_ok"
+            android:layout_below="@+id/button_double_ok"
+            android:layout_toStartOf="@+id/button_single_ok"
+            android:gravity="center" />
 
-        android:layout_alignTop="@+id/button_maybe" />
+        <com.svs.hztb.CustomViews.WalkWayTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textView_single_ok"
+            android:layout_weight="1"
+            android:textSize="10dp"
 
-    <TextView
-        android:id="@+id/textview_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/button_double_ok"
-        android:layout_below="@+id/button_double_ok"
-        android:layout_toStartOf="@+id/button_single_ok"
-        android:gravity="center"
-        android:text="0"
-        android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
 
-    <TextView
-        android:id="@+id/textView_single_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button_single_ok"
-        android:layout_alignTop="@+id/textview_ok"
-        android:gravity="center"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:layout_alignStart="@+id/button_single_ok"
-        android:layout_alignBottom="@+id/textview_ok"
-        android:layout_alignEnd="@+id/button_single_ok" />
+            android:layout_alignRight="@+id/button_single_ok"
+            android:layout_below="@+id/button_single_ok"
+            android:layout_toEndOf="@+id/button_double_ok"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/textView_maybe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView_single_ok"
+        <com.svs.hztb.CustomViews.WalkWayTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textView_maybe"        android:textColor="@android:color/black"
+            android:textSize="10dp"
 
-        android:gravity="center"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:layout_alignEnd="@+id/button_maybe"
-        android:layout_alignStart="@+id/button_maybe" />
+            android:layout_weight="1"
+            android:layout_alignTop="@+id/textView5"
+            android:layout_alignLeft="@+id/button_maybe"
+            android:layout_toStartOf="@+id/button_down"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/textView_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button_down"
-        android:layout_alignTop="@+id/textView_maybe"
-
-
-        android:layout_toEndOf="@+id/button_maybe"
-        android:gravity="center"
-        android:text="0"
-        android:textColor="@android:color/black" />
-</RelativeLayout>
+        <com.svs.hztb.CustomViews.WalkWayTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textView_down"
+            android:textSize="10dp"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
+            android:layout_alignEnd="@+id/button_down"
+            android:layout_alignTop="@+id/textView6"
+            android:layout_toEndOf="@+id/textView6"
+            android:gravity="center" />
+    </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
