--- a/app/src/main/res/layout/drawer_image_thumb.xml
+++ b/app/src/main/res/layout/drawer_image_thumb.xml
@@ -3,45 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:padding="15dp"
     android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X"
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:id="@+id/button"
-        android:layout_margin="5dp"
-        android:background="@color/picton_blue"
-        android:layout_alignParentTop="true"
+        android:padding="10dp"
+        android:background="@mipmap/close_icon"
         android:textColor="@android:color/white"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/thumb_image" />
 
     <com.svs.hztb.CustomViews.CircularImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/drawer_layout_thumbImage"
         android:background="@android:color/transparent"
-        android:layout_below="@+id/button"
         android:src="@mipmap/thumb"
         android:scaleType="fitCenter"
         app:civ_border="true"
+        android:layout_marginTop="20dp"
         app:civ_selector="true"
         app:civ_selectorColor="@android:color/holo_blue_bright"
         app:civ_selectorStrokeColor="@android:color/white"
         app:civ_selectorStrokeWidth="6dp"
+        android:layout_alignTop="@+id/button"
         android:layout_centerHorizontal="true" />
 
     <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:gravity="center"
         android:layout_marginLeft="10dp"
         android:textSize="26sp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:id="@+id/thumb_image"
         android:text="VENU NALLA"
         android:background="@android:color/transparent"
         android:layout_marginRight="10dp"
-        android:layout_below="@+id/drawer_layout_thumbImage"/>
+        android:layout_below="@+id/drawer_layout_thumbImage"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
