--- a/app/src/main/res/layout/custom_contact_item.xml
+++ b/app/src/main/res/layout/custom_contact_item.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageview_tick"
         android:src="@mipmap/tick"
+        android:layout_marginRight="15dp"
         android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textview_select_contacts"
