--- a/app/src/main/res/layout/fragment_new_request.xml
+++ b/app/src/main/res/layout/fragment_new_request.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    tools:context="com.svs.hztb.Fragments.NewRequestFragment"
     android:background="@mipmap/registration_bg"
 >
 
