--- a/app/src/main/res/layout/fragment_get_opinions_detail.xml
+++ b/app/src/main/res/layout/fragment_get_opinions_detail.xml
@@ -5,7 +5,12 @@
     android:background="@mipmap/registration_bg"
     android:orientation="vertical"
     tools:context="com.svs.hztb.Fragments.GetOpinionsDetailFragment">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/detail_opinion_layout"
+    android:visibility="visible"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -72,4 +77,25 @@
         android:visibility="gone"
         android:background="@android:color/white"
         android:layout_height="match_parent"></ListView>
+</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:id="@+id/viewSelfie_layout">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/selfie_imageView"/>
+
+        <com.svs.hztb.CustomViews.WalkWayButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/button_back"
+            android:background="@mipmap/button_crop_bit"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 </LinearLayout>
