--- a/app/src/main/res/layout/opinion_detail_fragment.xml
+++ b/app/src/main/res/layout/opinion_detail_fragment.xml
@@ -3,10 +3,35 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@mipmap/registration_bg"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:id="@+id/viewSelfie_layout">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/selfie_imageView"/>
 
+        <com.svs.hztb.CustomViews.WalkWayButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/button_back"
+            android:background="@mipmap/button_crop_bit"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:id="@+id/detail_opinion_layout"
+        android:visibility="visible"
         android:layout_height="match_parent">
     <include layout="@layout/custom_product_item"/>
     <com.svs.hztb.CustomViews.WalkWayButton
@@ -172,5 +197,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textColor="@android:color/white" />
+    </LinearLayout>
     </LinearLayout>
 </ScrollView>
